# testing

./: .gitignore  CBrun.sh  Dockerfile  cucamonga_app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml
app/districts/cucamonga/: general.py  sdwis.py  well_dashboard.py
app/districts/cucamonga/data/: __init__.py  database.ipynb  well_data_sheet.xlsx
app/districts/cucamonga/omit/: data_upload.py  input_table.py  rainfall_gauges.ipynb
app/utils/: dashboard_shared.py  figures.py  sdwis.py  wq_systems.parquet
districts/cucamonga/: combined_figures.py  deck_trial.ipynb  exploration.ipynb  figure_trials.ipynb  figures.py  input_table.py  plot_sdwis_wq.ipynb  rainfall_comparison.ipynb  rainfall_gauges.ipynb  schema.py  sdwis_wq.ipynb  sdwis_wq_charts.py  settings.py  well_completion_map.ipynb  well_dashboard.py  well_data_sheet.py  wq_config.py
districts/cucamonga/data/: CVWD Rainfall.xlsx  api_trial.ipynb  categories.json  database.db  main.py  required.json  sdwis_wq.parquet  supabase_database.py  test_database.py  well_data_organize.ipynb  well_data_sheet.json
districts/cucamonga/omit/: exploration.ipynb  exploration.md  exploration.py  figures.py  general.py  well_dashboard.py
docker_h/: Dockerfile  docker-compose.yml
tests/: package-lock.json  package.json
utils/: CDEC.py  dashboard_shared.py  sdwis_wq_numbers.json
