[tool.poetry]
name = "streamlit_data_management"
version = "0.1.1"
description = ""
authors = ["Denver Noell <dnoell@ppeng.com>"]

[tool.poetry.dependencies]
# python = "^3.9"
# streamlit used 3.9.16 so ^3.10 doesn't work
python = "=3.9.17"
plotly = "^5.12.0"
pandas = "^1.5.2"
arrow = "^1.2.3"
supabase = "^1.0.1"
ipykernel = "^6.21.3"
# streamlit = "^1.20.0"
tomli = "^2.0.1"
nbformat = "^5.7.3"
geopandas = "^0.12.2"
leafmap = "^0.18.3"
openpyxl = "^3.1.1"
tableauscraper = "^0.1.29"
polars= "^0.16.13"
Pint = "^0.20.1"
lxml = "^4.9.2"
XlsxWriter = "^3.0.9"
kaleido = "=0.2.1"
contextily = "^1.3.0"
extract-msg = "0.41.5"
xlrd = "2.0.1"
graphviz = "^0.20.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
